# Testing_CVaR_on_QAOA

./: .gitignore  README.md  setup.cfg
.github/workflows/: python-package.yml
examples/: 0_basics.ipynb  10_HPCoordinateBasedLattice_toHamiltonian.ipynb  10_HPCoordinateBasedLattice_toHamiltonian.py  10_vscode_port.py  1_optimize_barren_plateau_circuit_jax.py  2_optimize_qaoa_circuit_jax.py  3_optimize_molecular_hamiltonian.py  4_optimize_sequential_circuit_jax.py  5_compare_optimizer.py  6_1_visualize_circuit.py  6_2_visualize_circuit.ipynb  7_vqe.py  8_noisy_simulation.py  9_transpile_chalmers.ipynb  CVaR_implementation.ipynb  CVaR_variance_test.ipynb  Data_analysis.ipynb  GPyOpt_test.ipynb  Nils_bok_medGPyOpt.ipynb  Parameter_test_COBYLA.ipynb  Parameter_testing_for_CVaR.ipynb  Untitled.ipynb  Untitled1.ipynb
examples/pettson_data_test/HHHPPH/: sekvens HHHPPH, gridsize 3X2, p 1, alpha 0.05, Optimizer COBYLA, tol 0.001, initial parameters [0.1], [0.1], samples 1000, number of tests 20.csv  sekvens HHHPPH, gridsize 3X2, p 1, alpha 0.1, Optimizer COBYLA, tol 0.001, initial parameters [0.1], [0.1], samples 1000, number of tests 20.csv  sekvens HHHPPH, gridsize 3X2, p 1, alpha 0.25, Optimizer COBYLA, tol 0.001, initial parameters [0.1], [0.1], samples 1000, number of tests 20.csv  sekvens HHHPPH, gridsize 3X2, p 1, alpha 1.0, Optimizer COBYLA, tol 0.001, initial parameters [0.1], [0.1], samples 1000, number of tests 20.csv  (+12 more)
src/vqa/: instance.py
src/vqa/hamiltonian/: __init__.py  heisenberg.py  maxcut.py  molecule.py  transverse_field_ising.py  tsp.py  (+1 more)
(+205 files in other folders)
