[metadata]
name = vqa
version = 0.0.1

[options]
package_dir =
    =src
packages = 
    vqa
install_requires = 
    jax
    jaxlib
    jaxopt
    optax
    pennylane
    numpy
    tqdm
    matplotlib
    absl-py
    psutil
    sympy
    algorithmx
    black
    pytest
    ipykernel
    pyscf
    openfermion
    openfermionpyscf
    qiskit
    qiskit-terra
    pennylane-qiskit